# mtspy

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
cpp/: info_threads.h  main.cpp  sparse.h
demo/: spmm_benchmark.py  spmv_benchmark.py
demo/micro_benchmark/: run_multiple.sh  spmm_benchmark.py
demo/micro_benchmark/spmv/: run_multiple.sh  spmv_benchmark (copy).py  spmv_single_benchmark.py
demo/poisson/: poisson.py
mtspy/: __init__.py  linear_operator.py  sparse_ops.py  threads.py  utils.py
mtspy/cpp/: csr.hpp  eigen.hpp  main.cpp  robin_hood.h  span.hpp  sparse.h  sparse.hpp  sparse_sparse_impl.hpp  thread_control.hpp  utils.hpp  vector.hpp
mtspy/cpp/tsl/: robin_growth_policy.h  robin_set.h
tests/: test_linear_operator.py  test_performance.py  test_sparse_sparse.py  test_spmv.py  test_thread_control.py  test_utils.py
